k8s/production/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: worker-app-service
  namespace: production

spec:
  selector:
    app: worker-app

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
